# miniature-happiness

./: .coveragerc  README.md  README_prompt.md  app.py  db.py  pyproject.toml  questions.txt  requirements.txt  setup.cfg  tox.ini  whitelist.txt
.github/workflows/: python.yml
src/miniature_happiness/: __init__.py  db.py  db_interfaces.py  shapes.py  trains.py
tests/: conftest.py  test_app.py  test_db.py  test_db_interfaces.py  test_shapes.py
